--- a/RideTogether/app/src/main/res/values/strings.xml
+++ b/RideTogether/app/src/main/res/values/strings.xml
@@ -98,6 +98,7 @@
 
 
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_maps2">Map2</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
